3.0/api-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: svc-api
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: api.baidu.com
    http:
      paths:
      - path:
        backend:
          serviceName: svc-api
          servicePort: 8001
